[package]
name = "mapmachine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
simple_logger = "2.1.0"
log = "0.4.14"
gdal = "0.14.0"
# gdal = { path = "../gdal-rs" }
gdal-sys = "0.8.0"
png = "0.17.7"
serde = { version = "1.0.152", features = ["derive"] }
handlebars = "4.3.6"
serde_json = "1.0.94"
