[package]
name = "tilemachine"
version = "0.1.0"
edition = "2021"
default-run = "tilemachine"

[[bin]]
name = "jstest"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
simple_logger = "2.1.0"
log = "0.4.14"
# gdal = "0.14.0"
# This requires checking out the 'add_dataset_read_as' branch from this fork of the GDAL bindings in a ../gdal-rs directory:
# https://github.com/julienr/gdal-rs/tree/add_dataset_read_as
gdal = { path = "../gdal-rs" }
gdal-sys = { path = "../gdal-rs/gdal-sys", version = "^0.9" }
png = "0.17.7"
serde = { version = "1.0.152", features = ["derive"] }
handlebars = "4.3.6"
serde_json = "1.0.94"
v8 = "0.74.3"
